round image done

--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
         </div>
         <div class="content">
             <p><i class="fa-solid fa-house"></i>INTRODUCE</p>
+            <h1>say hi from <span>Kaali</span>, Youtuber and Social Media Personality</h1>
+            <h4>anything...</h4>
+            <div class="image">
+                <i class="fa-solid fa-arrow-down"></i>
+                <img src="image/round-text.png" alt="">
+            </div>
         </div>
+        
     </div>
 </body>
 </html>
