burger button done

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
                 <img src="image/round-text.png" alt="">
             </div>
         </div>
-        
+        <div class="navbar">
+            <div class="toggle">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </div>
     </div>
 </body>
 </html>
