--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
             <div class="toggle">
                 <i class="fa-solid fa-bars"></i>
             </div>
+            <div class="navbar-icons">
+                <ul>
+                    <li><a href="#"><span>Home</span><i class="fa-solid fa-house"></i></a></li>
+                    <li><a href="#"><span>User</span><i class="fa-solid fa-user"></i></a></li>
+                    <li><a href="#"><span>Resume</span><i class="fa-solid fa-bag-shopping"></i></a></li>
+                    <li><a href="#"><span>Service</span><i class="fa-solid fa-regular fa-bars-staggered"></i></a></li>
+                    <li><a href="#"><span>Skills</span><i class="fa-solid fa-pen"></i></a></li>
+                    <li><a href="#"><span>Portfolio</span><i class="fa-solid fa-building"></i></a></li>
+                    <li><a href="#"><span>Testimonals</span><i class="fa-solid fa-message"></i></a></li>
+                    <li><a href="#"><span>Contact</span><i class="fa-sharp fa-regular fa-envelope"></i></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
