--- a/index.html
+++ b/index.html
@@ -63,11 +63,25 @@
                     <li><a href="#"><span>Resume</span><i class="fa-solid fa-bag-shopping"></i></a></li>
                     <li><a href="#"><span>Service</span><i class="fa-solid fa-regular fa-bars-staggered"></i></a></li>
                     <li><a href="#"><span>Skills</span><i class="fa-solid fa-pen"></i></a></li>
-                    <li><a href="#"><span>Portfolio</span><i class="fa-solid fa-building"></i></a></li>
-                    <li><a href="#"><span>Testimonals</span><i class="fa-solid fa-message"></i></a></li>
+                    <li><a href="#"><span>Portfolios</span><i class="fa-solid fa-building"></i></a></li>
+                    <li><a href="#"><span>Testimonal</span><i class="fa-solid fa-message"></i></a></li>
                     <li><a href="#"><span>Contact</span><i class="fa-sharp fa-regular fa-envelope"></i></a></li>
                 </ul>
             </div>
+        </div>
+        <div class="side-bar">
+            <i class="fa-solid fa-xmark"></i>
+            <h3>menu</h3>
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-house"></i><span>Home</span></a></li>
+                <li><a href="#"><i class="fa-solid fa-user"></i><span>User</span></a></li>
+                <li><a href="#"><i class="fa-solid fa-bag-shopping"></i><span>Resume</span></a></li>
+                <li><a href="#"><i class="fa-solid fa-regular fa-bars-staggered"></i><span>Service</span></a></li>
+                <li><a href="#"><i class="fa-solid fa-pen"></i><span>Skills</span></a></li>
+                <li><a href="#"><i class="fa-solid fa-building"></i><span>Portfolios</span></a></li>
+                <li><a href="#"><i class="fa-solid fa-message"></i><span>Testimonal</span></a></li>
+                <li><a href="#"><i class="fa-sharp fa-regular fa-envelope"></i><span>Contact</span></a></li>
+            </ul>
         </div>
     </div>
 </body>
