--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
                 <div class="icon">
                     <i class="fa-brands fa-instagram"></i>
                 </div>
+                <div class="icon">
+                    <i class="fa-brands fa-tiktok"></i>
+                </div>
                 
             </div>
                 <button>
-                    <i class="fa-sharp fa-fa-regular fa-envelope"></i>
+                    <i class="fa-sharp fa-regular fa-envelope"></i>
                 </button>
         </div>
         <div class="content">
@@ -82,6 +85,16 @@
                 <li><a href="#"><i class="fa-solid fa-message"></i><span>Testimonal</span></a></li>
                 <li><a href="#"><i class="fa-sharp fa-regular fa-envelope"></i><span>Contact</span></a></li>
             </ul>
+            <div class="social">
+                <h3>Social</h3>
+                <div>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-tiktok"></i>
+                </div>
+            </div>
         </div>
     </div>
 </body>
