--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="refresh" content="30">
     <meta name="author" content="Kariyawasam Thanthrige Ravindu Yasanka">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Kaali Portfolio</title>
 </head>
 <body>
