--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h4>anything...</h4>
             <div class="image">
                 <i class="fa-solid fa-arrow-down"></i>
-                <img src="image/round-text.png" alt="">
+                <!-- <img src="peace.jpg" alt=""> -->
             </div>
         </div>
         <div class="navbar">
@@ -73,7 +73,7 @@
                 </ul>
             </div>
         </div>
-        <div class="side-bar">
+        <!-- <div class="side-bar">
             <i class="fa-solid fa-xmark"></i>
             <h3>menu</h3>
             <ul>
@@ -96,7 +96,7 @@
                     <i class="fa-brands fa-tiktok"></i>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <script>
         toggle = document.querySelector(".toggle")
