profile pic added

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class="container">
         <div class="profile">
             <div class="heading">
-                <img src="" alt="kaali logo">    
+                <img src="kaali1" alt="kaali logo">    
                 <h6 style="text-align: end;">Internet Character</h6>
             </div>
             <div class="image">
-                <img src="" alt="kaali">
+                <img src="kaali1.jpeg" alt="kaali">
             </div>
             <h2>hello@Kaali.com<br>Base in Colombo,Sri Lanka
             </h2>
