--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="content">
             <p><i class="fa-solid fa-house"></i>INTRODUCE</p>
-            <h1>say hi from <span>Kaali</span>, Youtuber and Social Media Personality</h1>
+            <h1>say hi from <span style="font-size: 65px">Kaali</span>, Youtuber and Social Media Personality</h1>
             <h4>anything...</h4>
             <div class="image">
                 <i class="fa-solid fa-arrow-down"></i>
