testing the sidebar error

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </ul>
             </div>
         </div>
-        <!-- <div class="side-bar">
+        <div class="side-bar">
             <i class="fa-solid fa-xmark"></i>
             <h3>menu</h3>
             <ul>
@@ -96,7 +96,7 @@
                     <i class="fa-brands fa-tiktok"></i>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
     <script>
         toggle = document.querySelector(".toggle")
